--- a/home.html
+++ b/home.html
@@ -29,6 +29,15 @@
             </a>
         </div>
     </div>
+     <div class="logo">
+        <h2>Pokédex Pro</h2>
+    </div>
     
+    <div class="conteudo">
+        <h1>Pokédex Pro</h1>
+        
+    </div>
+</main>
+
 </body>
 </html>
