--- a/home.html
+++ b/home.html
@@ -39,5 +39,23 @@
     </div>
 </main>
 
+
+        <div class="entrada">
+            <h2>Bem-vindo à Pokédex Pro!</h2>
+            <p>O Pokédex Pro é um protótipo moderno, responsivo e totalmente integrado à PokeAPI, desenvolvido com o objetivo de fornecer aos treinadores Pokémon uma plataforma rápida, organizada e confiável para consultar informações essenciais sobre diversas espécies. Em um mundo Pokémon em constante evolução, torna-se fundamental uma ferramenta digital capaz de reunir dados oficiais de forma clara, atualizada e visualmente atraente.</p>
+    <p>Este projeto une conhecimentos de Desenvolvimento de Sistemas, integrando um backend em Node.js/JavaScript para o consumo robusto da API com um frontend construído em HTML, CSS e Flexbox, garantindo um layout adaptável a diferentes dispositivos e telas.</p>
+    <p>O sistema apresenta uma Home intuitiva e quatro páginas dedicadas aos tipos de Pokémon atribuídos ao grupo, cada uma contendo 12 criaturas com informações completas, como nome, imagem, peso, altura, habilidades e estatísticas de ataque e defesa.</p>
+
+    <h2>Sobre o Grupo 5</h2>
+
+    <p>O Pokédex Pro foi desenvolvido pelo Grupo 5, composto por: Júlia Machado Reis, Kaio Grapea Pires, Karen Pereira Gesualdo, Laís Vitória de Brito da Silva, Manuela de Camargo Silva e Sofia Borborema Boscatti.</p>
+    <p>Somos uma equipe colaborativa e comprometida, que uniu diferentes habilidades para planejar, estruturar e entregar um protótipo funcional e tecnicamente consistente. Trabalhamos com organização, criatividade e foco na solução de problemas, aplicando na prática os conhecimentos adquiridos ao longo do curso.</p>
+
+    <h2>Nosso Propósito</h2>
+
+    <p>Mais do que um trabalho acadêmico, o Pokédex Pro representa uma experiência real de desenvolvimento, desde o consumo de APIs até a criação de interfaces responsivas e usáveis. Nosso objetivo é demonstrar competências técnicas, raciocínio lógico e capacidade de trabalho em equipe, entregando uma plataforma que traduz tecnologia, eficiência e paixão pelo universo Pokémon.</p>
+</div>
+
+
 </body>
 </html>
