--- a/home.html
+++ b/home.html
@@ -55,7 +55,10 @@
 
     <p>Mais do que um trabalho acadêmico, o Pokédex Pro representa uma experiência real de desenvolvimento, desde o consumo de APIs até a criação de interfaces responsivas e usáveis. Nosso objetivo é demonstrar competências técnicas, raciocínio lógico e capacidade de trabalho em equipe, entregando uma plataforma que traduz tecnologia, eficiência e paixão pelo universo Pokémon.</p>
 </div>
-
+ 
+        <footer>
+            © 2025 Pokémon Pro — Serviço Nacional de Aprendizagem Industrial.
+        </footer>
 
 </body>
 </html>
