edições dos links no html

--- a/pages/Poison.html
+++ b/pages/Poison.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex Pro - Poison</title>
-    <link rel="stylesheet" href="assets/css/poison.css">
+    <link rel="stylesheet" href="../assets/css/poison.css">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="logo">Pokédex Pro</div>
     
     <div class="botoes">
-    <a href="/projeto final/assets/pages/home.html">
+    <a href="../home.html">
     <button id="btnHome">Home</button>
     </a>
     <a href="/projeto final/assets/pages/fairy.html">
@@ -36,6 +36,6 @@
 
 <div id="pokemon-container" class="container"></div>
 
-<script src="assets/js/poison.js"></script>
+<script src="../assets/js/posion.js"></script>
 </body>
 </html>
