--- a/pages/ghost.html
+++ b/pages/ghost.html
@@ -16,7 +16,7 @@
     <div class="logo">Pokédex Pro</div>
     
     <div class="botoes">
-    <a href="/projeto final/assets/pages/home.html">
+    <a href="../home.html">
     <button id="btnHome">HOME</button>
     </a>
     <a href="/projeto final/assets/pages/fairy.html">
