--- a/pag_ghost.html
+++ b/pag_ghost.html
@@ -21,7 +21,7 @@
         clique para descobrir quais são os pokemons !
       </a>
     </div>
-            <img src="assets/img/ghost.png" alt="Tipo Ghost" width="350px" height="350px">
+            <img src="assets/img/ghost.png" alt="Tipo pokemon Ghost" width="350px" height="350px">
       </div>
     </div>
   </section>
