--- a/home.html
+++ b/home.html
@@ -15,16 +15,16 @@
             <a href="home.html">
                 <button id="btnHome">Home</button>
             </a>
-            <a href="assets/pages/fairy.html">
+            <a href="pages/pag_fairy.html">
                 <button id="btnFairy">Fairy</button>
             </a>
-            <a href="assets/pages/dark.html">
+            <a href="pages/pag_dark.html">
                 <button id="btnDark">Dark</button>
             </a>
-            <a href="assets/pages/poison.html">
+            <a href="pages/pag_poison.html">
                 <button id="btnPoison">Poison</button>
             </a>
-            <a href="assets/pages/ghost.html">
+            <a href="pages/pag_ghost.html">
                 <button id="btnGhost">Ghost</button>
             </a>
         </div>
