--- a/pages/pag_dark.html
+++ b/pages/pag_dark.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fairy Type</title>
-  <link rel="stylesheet" href="assets/css/pag_dark.css">
+  <link rel="stylesheet" href="../assets/css/pag_dark.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 <p>Eles são super eficazes contra Psíquico e Fantasma, mas fracos contra Lutador, Fada e Inseto, além de serem imunes a ataques do tipo Psíquico.</p>
       </p>
 
-      <a href="#" class="botao">
+      <a href="" class="botao">
         clique para descobrir quais são os pokemons !
       </a>
     </div>
