--- a/pages/pag_fairy.html
+++ b/pages/pag_fairy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fairy Type</title>
-  <link rel="stylesheet" href="assets/css/pag_fairy.css">
+  <link rel="stylesheet" href="../assets/css/pag_fairy.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
         Veneno e Aço, e são imunes a Dragão.</p>
       </p>
 
-      <a href="#" class="botao">
+      <a href="fairy.html" class="botao">
         clique para descobrir quais são os pokemons !
       </a>
     </div>
