--- a/pages/pag_ghost.html
+++ b/pages/pag_ghost.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fairy Type</title>
-  <link rel="stylesheet" href="assets/css/pag_ghost.css">
+  <link rel="stylesheet" href="../assets/css/pag_ghost.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
 <p>Eles são super eficazes contra Psíquico e Fantasma, mas fracos contra Sombrio e Fantasma, além de serem imunes a golpes do tipo Normal e Lutador.
       </p>
 
-      <a href="#" class="botao">
+      <a href="ghost.html" class="botao">
         clique para descobrir quais são os pokemons !
       </a>
     </div>
