--- a/pages/pag_poison.html
+++ b/pages/pag_poison.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fairy Type</title>
-  <link rel="stylesheet" href="assets/css/pag_poison.css">
+  <link rel="stylesheet" href="../assets/css/pag_poison.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
 <p>Eles são super eficazes contra Fada e Planta, mas fracos contra Terrestre e Psíquico, além de resistirem a Lutador, Veneno, Inseto e Fada e não serem afetados por golpes do tipo Veneno.
       </p>
 
-      <a href="#" class="botao">
+      <a href="Poison.html" class="botao">
         clique para descobrir quais são os pokemons !
       </a>
     </div>
