--- a/pages/Poison.html
+++ b/pages/Poison.html
@@ -19,16 +19,16 @@
     <a href="../home.html">
     <button id="btnHome">Home</button>
     </a>
-    <a href="/projeto final/assets/pages/fairy.html">
+    <a href="pag_fairy.html">
     <button id="btnFairy">Fairy</button>
     </a>
-    <a href="/projeto final/assets/pages/dark.html">
+    <a href="pag_dark.html">
     <button id="btnDark">Dark</button>
     </a>
-    <a href="/projeto final/assets/pages/poison.html">
+    <a href="pag_poison.html">
     <button id="btnPoison">Poison</button>
     </a>
-    <a href="/projeto final/assets/pages/ghost.html">
+    <a href="pag_ghost.html">
     <button id="btnGhost">Ghost</button>
     </a>
     </div>
