--- a/pages/dark.html
+++ b/pages/dark.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex Pro - Dark</title>
-    <link rel="stylesheet" href="assets/css/dark.css">
+    <link rel="stylesheet" href="../assets/css/dark.css">
 
 </head>
 <body>
@@ -16,19 +16,19 @@
     <div class="logo">Pokédex Pro</div>
     
     <div class="botoes">
-    <a href="/projeto final/assets/pages/home.html">
+    <a href="../home.html">
     <button id="btnHome">HOME</button>
     </a>
-    <a href="/projeto final/assets/pages/fairy.html">
+    <a href="pag_fairy.html">
     <button id="btnFairy">Fairy</button>
     </a>
-    <a href="/projeto final/assets/pages/dark.html">
+    <a href="pag_dark.html">
     <button id="btnDark">Dark</button>
     </a>
-    <a href="/projeto final/assets/pages/poison.html">
+    <a href="pag_poison.html">
     <button id="btnPoison">Poison</button>
     </a>
-    <a href="dark.html">
+    <a href="pag_ghost.html">
     <button id="btnGhost">Ghost</button>
     </a>
     </div>
@@ -36,7 +36,7 @@
 
 <div id="pokemon-container" class="container"></div>
 
-<script src="assets/dark.js"></script>
+<script src="../assets/js/dark.js"></script>
 
 </body>
 </html>
