correção do html pag dark

--- a/pages/pag_dark.html
+++ b/pages/pag_dark.html
@@ -16,7 +16,7 @@
 <p>Eles são super eficazes contra Psíquico e Fantasma, mas fracos contra Lutador, Fada e Inseto, além de serem imunes a ataques do tipo Psíquico.</p>
       </p>
 
-      <a href="" class="botao">
+      <a href="dark.html" class="botao">
         clique para descobrir quais são os pokemons !
       </a>
     </div>
