--- a/pages/pag_dark.html
+++ b/pages/pag_dark.html
@@ -20,7 +20,7 @@
         clique para descobrir quais são os pokemons !
       </a>
     </div>
-            <img src="assets/img/dark.png" alt="Tipo Dark" width="350px" height="350px">
+            <img src="../assets/img/dark.png" alt="Tipo Dark" width="350px" height="350px">
       </div>
     </div>
   </section>
