--- a/pages/pag_fairy.html
+++ b/pages/pag_fairy.html
@@ -25,7 +25,7 @@
         clique para descobrir quais são os pokemons !
       </a>
     </div>
-            <img src="assets/img/fairy.png" alt="Tipo Fairy" width="350px" height="350px">
+            <img src="../assets/img/fairy.png" alt="Tipo Fairy" width="350px" height="350px">
       </div>
     </div>
   </section>
