--- a/pages/pag_poison.html
+++ b/pages/pag_poison.html
@@ -21,7 +21,7 @@
         clique para descobrir quais são os pokemons !
       </a>
     </div>
-            <img src="assets/img/poison.png" alt="Tipo do pokemon Poison" width="350px" height="350px">
+            <img src="../assets/img/poison.png" alt="Tipo do pokemon Poison" width="350px" height="350px">
       </div>
     </div>
   </section>
