--- a/pages/dark.html
+++ b/pages/dark.html
@@ -37,6 +37,8 @@
 <div id="pokemon-container" class="container"></div>
 
 <script src="../assets/js/dark.js"></script>
-
+   <footer>
+            © 2025 Pokémon Pro — Serviço Nacional de Aprendizagem Industrial.
+        </footer>
 </body>
 </html>
