--- a/pages/Poison.html
+++ b/pages/Poison.html
@@ -37,5 +37,8 @@
 <div id="pokemon-container" class="container"></div>
 
 <script src="../assets/js/posion.js"></script>
+   <footer>
+            © 2025 Pokémon Pro — Serviço Nacional de Aprendizagem Industrial.
+        </footer>
 </body>
 </html>
