--- a/pages/fairy.html
+++ b/pages/fairy.html
@@ -39,5 +39,8 @@
 <div id="pokemon-container" class="container"></div>
 
 <script src="../assets/js/fairy.js"></script>
+   <footer>
+            © 2025 Pokémon Pro — Serviço Nacional de Aprendizagem Industrial.
+        </footer>
 </body>
 </html>
