--- a/pages/ghost.html
+++ b/pages/ghost.html
@@ -37,5 +37,8 @@
 <div id="pokemon-container" class="container"></div>
 
 <script src="../assets/js/ghost.js"></script>
+   <footer>
+            © 2025 Pokémon Pro — Serviço Nacional de Aprendizagem Industrial.
+        </footer>
 </body>
 </html>
