--- a/pages/pag_dark.html
+++ b/pages/pag_dark.html
@@ -17,7 +17,7 @@
       </p>
 
       <a href="dark.html" class="botao">
-        clique para descobrir quais são os pokemons !
+        Clique para descobrir quais são os pokemons !
       </a>
     </div>
             <img src="../assets/img/dark.png" alt="Tipo Dark" width="350px" height="350px">
