--- a/pages/pag_fairy.html
+++ b/pages/pag_fairy.html
@@ -22,7 +22,7 @@
       </p>
 
       <a href="fairy.html" class="botao">
-        clique para descobrir quais são os pokemons !
+        Clique para descobrir quais são os pokemons !
       </a>
     </div>
             <img src="../assets/img/fairy.png" alt="Tipo Fairy" width="350px" height="350px">
