--- a/pages/pag_ghost.html
+++ b/pages/pag_ghost.html
@@ -18,7 +18,7 @@
       </p>
 
       <a href="ghost.html" class="botao">
-        clique para descobrir quais são os pokemons !
+        Clique para descobrir quais são os pokemons !
       </a>
     </div>
             <img src="../assets/img/ghost.png" alt="Tipo pokemon Ghost" width="350px" height="350px">
