--- a/pages/pag_poison.html
+++ b/pages/pag_poison.html
@@ -18,7 +18,7 @@
       </p>
 
       <a href="Poison.html" class="botao">
-        clique para descobrir quais são os pokemons !
+        Clique para descobrir quais são os pokemons !
       </a>
     </div>
             <img src="../assets/img/poison.png" alt="Tipo do pokemon Poison" width="350px" height="350px">
